Made changes according to sonarQube report